[package]
name = "fine-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6", features=["ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
dotenvy = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.22", features = ["tokio-comp"]}
chrono = "0.4"
ricq = "0.1.19"